--- a/gateway-ctp-trader/pom.xml
+++ b/gateway-ctp-trader/pom.xml
@@ -33,6 +33,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.ctp4j</groupId>
             <artifactId>ctp4j</artifactId>
             <version>1.0.4</version>
