--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.openglobes.plugin</groupId>
-    <artifactId>plugins</artifactId>
+    <artifactId>core-plugins</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
 
